<resources>
    <string name="app_name">App Veterinaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Veterinaria</string>
    <string name="nav_header_subtitle">appveterinaria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">Login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_login2">Login2</string>
    <string name="login_bienvenida">Te damos la bienvenida!</string>
    <string name="btnContinuar">Ingresar</string>
    <string name="OlvidoContrasena">¿Olvidaste la contraseña?</string>
    <string name="menu_mypets">Mis Mascotas</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_consejos">Consejos</string>
    <string name="menu_recordatorio">Recordatorios</string>
    <string name="menu_valorarapp">Valorar App</string>
    <string name="menu_miperfil">Perfil</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="text_titleregister">Se parte de nuestra familia!</string>
    <string name="text_registrar">Registrar</string>
    <string name="text_nombre_register">Nombre</string>
    <string name="text_apellidos_register">Apellidos</string>
    <string name="text_telefono_register">Teléfono</string>
    <string name="text_btn_verdatos_pets">Ver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_fecha_cita">Fecha:</string>
    <string name="text_servicio_cita">Tipo de Servicio</string>
    <string name="text_title_cita">Nueva Cita</string>
    <string name="text_hora_cita">Hora:</string>
    <string name="text_hint_fecha_cita">Seleccionar fecha</string>
    <string name="text_hint_hora_cita">Seleccionar Hora</string>
    <string name="text_observacionescita">Observaciones:</string>
    <string name="text_hint_observaciones_cita">Observaciones..</string>
    <string name="text_button_enviarCita">Reservar</string>
</resources>