<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mypets"
            android:icon="@drawable/ic_baseline_pets_24"
            android:title="@string/menu_mypets" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_consejos"
            android:icon="@drawable/ic_baseline_emoji_objects_24"
            android:title="@string/menu_consejos" />
        <item
            android:id="@+id/nav_recordatorio"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_recordatorio" />
        <item
            android:id="@+id/nav_valorarapp"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/menu_valorarapp" />
        <item
            android:id="@+id/nav_miperfil"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_miperfil" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/menu_cerrar" />
    </group>
</menu>