<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".login.Register">

    <EditText
        android:id="@+id/editTextTextapellidos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/text_apellidos_register"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#C1C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNombre" />

    <EditText
        android:id="@+id/editTextTexttelefono"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_telefono_register"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#C1C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextapellidos" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_titleregister"
        android:textAlignment="center"
        android:textColor="#F0F0F1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="#FAFAFA"
        android:textColorHint="#C1C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTexttelefono" />

    <EditText
        android:id="@+id/editTextTextPasswordregister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="#F8F8F8"
        android:textColorHint="#C1C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordregister" />

    <EditText
        android:id="@+id/editTextTextNombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/text_nombre_register"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#C1C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_veterinaria" />

</androidx.constraintlayout.widget.ConstraintLayout>